# FfmpegPlyer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ice/aaa/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/ice/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  NEFFmpeg.cpp  NEFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/ice/ffmpeg/: IcePlayer.kt  MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ice/aaa/: ExampleUnitTest.java
app/src/test/java/com/ice/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
